<?xml version="1.0"?>
<package>
    <name>herkulex_servo_controller</name>
    <version>0.0.0</version>
    <description>The herkulex_servo_controller package</description>

    <maintainer email="mitka@agh.edu.pl">Łukasz Mitka</maintainer>

    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>serial</build_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>serial</run_depend>

</package>